mobile fix overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,8 +86,10 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
 
+}
 
-
+main {
+  overflow-x: hidden;
 }
 
 
